--- a/concomp.Rmd
+++ b/concomp.Rmd
@@ -63,25 +63,91 @@ We have implemented a single-pass algorithm where we traverse the matrix row wis
 
 We then built the R package using the package `devtools`. 
 
-### Some examples
-#```{r}
-library(png)
+
+---
+title: "STA523 Final Project"
+author: "Dipesh Gautam, Radhika Anand, Haosheng Luo, Siyang Li"
+date: "12/12/2014"
+output: html_document
+---
+
+
+```{r}
 library(Matrix)
 library(concomp)
+
+```
+
+
+## Some examples
+We ran our functions to check for boundaries for a logical matrix we created with a few components as well as holes in them and also for a sample image. The resulting images for both the examples are shown below.
+
+### Example 1: Sample Matrix
+We tested our functions with a 100x100 matrix defined below.
+```{r}
+mat = matrix(rep(0, 100*100), nrow = 100)
+mat[1:5, 1:100] = 1
+mat[1:100, 1:5] = 1
+mat[96:100, 1:100] = 1
+mat[1:100, 96:100] = 1
+mat[11:15, 11:90] = 1
+mat[11:90, 11:15] = 1
+mat[86:90, 11:90] = 1
+mat[11:90, 86:90] = 1
+mat[25:50, 25:50] = 1
+mat[51:75,51:75] = 1
+```
+
+We tested the functions for both 4 and 8-connected connectivity. The results are shown below, we can clearly see that the two square blocks on the center are connected according to 8-connected connectivity but not according to 4-connected.
+
+<p style='text-align: center;'> __Plot showing original matrix__</p>
+```{r, fig.align='center'}
+image(Matrix(mat))
+```
+
+
+<p style='text-align: center;'> __Plot showing different 4-connected components as detected by `conLabel()` function__</p>
+```{r, echo=FALSE, fig.align='center'}
+A = conLabel(mat)
+image(Matrix(A), col.regions = c(1:max(A)))
+```
+
+<p style='text-align: center;'> __Plot showing different 8-connected components as detected by `conLabel()` function__</p>
+```{r, echo=FALSE, fig.align='center'}
+A = conLabel(mat,8)
+image(Matrix(A), col.regions = c(1:max(A)))
+```
+
+<p style='text-align: center;'> __Plot showing boundaries of different 4-connected components as detected by `conLabel()` function__</p>
+```{r, echo=FALSE, fig.align='center'}
+A = conBoundaries(mat)
+image(Matrix(A), col.regions = c(1:max(A)))
+```
+
+
+### Example 2: Sample png image
+```{r, fig.align='center', echo=FALSE}
 img = readPNG("git.png")
 mat = imgMat("git.png")
-plot(c(0,103),c(0,100), axes=F, type ="n", xlab ="", ylab ="", main = "Original Image")
-rasterImage(img, 0,0,103,100)
+plot(c(0,1000),c(0,400), axes=F, type ="n", xlab ="", ylab ="", main = "Original Image")
+rasterImage(img, 0,0,1000,400, asp = .4)
+```
 
+<p style='text-align: center;'> __Matrix representation after changing the image into logical matrix using `imgMat()` function__</p>
+```{r, fig.align='center', echo=FALSE}
 mat = imgMat("git.png")
 Matrix::image(Matrix(mat), col.regions = c(1:max(mat)))
+```
 
+<p style='text-align: center;'> __Plot showing different components as detected by `conLabel()` function__</p>
+```{r, fig.align='center', echo=FALSE}
 lab = conLabel(mat)
 Matrix::image(Matrix(lab), col.regions = c(1:max(lab)))
+```
 
+<p style='text-align: center;'> __Plot showing boundaries of different components as detected by `conBoundaries()` function__</p>
+```{r, fig.align='center', echo=FALSE}
 labBound = conBoundaries(mat)
 Matrix::image(Matrix(labBound), col.regions = c(1:max(labBound)))
-
-
-#```
+```
 
